# rust-guestbook

./: .gitignore  Cargo.toml  README.md  schema.sql  wrangler.toml
.github/workflows/: ci.yml  deploy.yml
src/: lib.rs
static/: admin.html  index.html
