[package]
name = "rust-guestbook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
getrandom = { version = "0.2", features = ["js"] }
subtle = "2"
percent-encoding = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
